--- a/css/guestbook.css
+++ b/css/guestbook.css
@@ -1,18 +1,52 @@
+/*
+I made the visitor page theme match my dark mode theme (retro green phosphor).
+- Instead of an outline when an input is active, I have a right angle bracket that points
+to where the cursor should be.
+- I centered all elements and made them responsive at sizes all the way down to mobile
+- A have the checkboxes in a single row for wide screens, but on smaller widths they each become their own column
+*/
+
+@font-face {
+  font-family: IBM;
+  src: url("../fonts/IBM_Plex_Mono/IBMPlexMono-Light.ttf");
+}
+
 body {
-  font: normal 22px/1.5 sans-serif;
-  background: #2196f3;
-  color: #fff;
+  font-family: IBM;
+  background: black;
+  color: lime;
   margin: auto;
   padding: 50px 0;
 }
 
 form {
-  width: 400px;
+  width: 80%;
 }
 
 .errorMsg {
   color: red;
 }
+
+input {
+  border: none;
+  background-color: black;
+  border-bottom: solid 1px lime;
+  padding: 5px;
+  color: lime;
+}
+
+input:focus {
+  outline: none;
+}
+
+span:has(+ input) {
+  visibility: hidden;
+}
+
+span:has(+ input:focus) {
+  visibility: visible;
+}
+
 /*only show error information when 'was-validated' class is added to the input*/
 input.was-validated:invalid {
   color: red;
@@ -48,8 +82,11 @@ input:invalid ~ div {
 .flex {
   list-style-type: none;
   padding: 0;
-  max-width: 500px;
   margin: 0 auto;
+}
+
+ul.flex {
+  width: 100%;
 }
 
 .flex li {
@@ -63,7 +100,7 @@ input:invalid ~ div {
   align-items: center;
   -webkit-box-pack: end;
   -ms-flex-pack: end;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .flex li li input,
@@ -107,4 +144,53 @@ input:invalid ~ div {
   -ms-flex: 1 0 350px;
   flex: 1 0 350px;
   text-align: right;
+}
+
+input[type="checkbox"] {
+  margin-right: 10px;
+}
+
+#source {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  font-size: 1.5em;
+}
+
+@media screen and (max-width: 1050px) {
+  #source {
+    flex-direction: column;
+    width: 10em;
+    align-items: start;
+    margin: auto;
+    font-size: 1.25em;
+  }
+}
+
+#find-block {
+  border: solid 1px lime;
+  padding: 0 20px 20px;
+  margin: 50px auto;
+  overflow: hidden;
+}
+
+fieldset {
+  border: none;
+  border: solid 1px lime;
+  margin-bottom: 20px;
+}
+
+fieldset textarea {
+  color: lime;
+  background-color: black;
+  padding: 5px;
+  width: 100%;
+  font-size: 1.5em;
+  border: none;
+  outline: none;
+}
+
+legend label {
+  margin: 0 10px;
+  font-size: x-large;
 }
